<?xml version="1.0"?>
<package format="2">
  <name>ros1_integration_testing</name>
  <version>0.0.1</version>
  <description>Tutorial package demonstrating ROS1 integration testing with rostest</description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
